tests/chainsaw/disallow-privilege-escalation/bad-pod-unset.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad-pod-priv-esc-unset
spec:
  containers:
  - name: container01
    image: busybox:1.35
    args:
    - sleep
    - 1d
