tests/chainsaw/disallow-privilege-escalation/bad-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad-pod-priv-esc
spec:
  containers:
  - name: container01
    image: busybox:1.35
    args:
    - sleep
    - 1d
    securityContext:
      allowPrivilegeEscalation: true
